@@ -150,8 +150,6 @@ static key_menu_t key_menu[] = {
 
 };
 
-static const guint key_menu_count = G_N_ELEMENTS( key_menu );
-
 GtkTreeModel *
 create_joystick_options_store( void )
 {
@@ -161,7 +159,7 @@ create_joystick_options_store( void )
 
   store = gtk_tree_store_new( NUM_COLS, G_TYPE_STRING, G_TYPE_INT );
 
-  for( i = 0; i < key_menu_count; i++ ) {
+  for( i = 0; i < ARRAY_SIZE( key_menu ); i++ ) {
 
     switch( key_menu[i].item ) {
 
@@ -373,7 +371,7 @@ create_fire_button_selector( const char *title, struct button_info *info,
   info->key = *info->setting;
   info->label = gtk_label_new( "" );
 
-  for( i = 0; i < key_menu_count; i++ ) {
+  for( i = 0; i < ARRAY_SIZE( key_menu ); i++ ) {
     
     keyboard_key_name key;
 
